# Test_bench_visualizer

./: .gitignore  .gitlab-ci.yml  README.md  eslint.config.js  index.html  jest.config.ts  jest.setup.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: tauri.yml
src/: App.css  App.tsx  app.tsx  device-card.tsx  device-grid.tsx  main.tsx  side-bar.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: isolate_main.rs  lib.rs  main.rs
src-tauri/src/models/: api_struct.rs  enums.rs  mod.rs  response.rs
src-tauri/src/services/: gitlab_services.rs  mod.rs  utils.rs
src/bindings/: ByCardsResponse.ts  Commit.ts  Job.ts  Pipeline.ts  PipelineJobsResponse.ts  TestReport.ts  TestSuite.ts  Total.ts
src/component/: board-card.tsx  card-progress-bar.tsx  choose-card.tsx  dashboard.tsx  device-card.tsx  device-grid.tsx  led-manager.tsx  pipeline-board.tsx  settings.tsx  side-bar.tsx  type-card-dropdown.tsx
src/stores/: card-store.ts  gitlab-store.ts  json-store.ts  ledstrip-store.ts  store-constant.ts
src/utils/: ble-utils.ts  ble.ts  board-store.ts  error.ts  global-variable.ts  job-utilities.ts  led-control.ts
tests/: card-store.test.ts  gitlab-store.test.ts  json-store.test.ts
tests/builder/: byCardResponse-builder.ts  job-builder.ts  pipelineJobResponse-builder.ts
