[package]
name = "banc_test_mvp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "banc_test_mvp"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "banc_test_mvp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-stronghold = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2.4.0"
tauri-plugin-store = "2"
gitlab = "0.1801.0"
tokio = "1.45.0"
chrono = "0.4.41"
ts-rs = "10.1.0"
futures = "0.3.31"
tauri-plugin-blec = "0.5.3"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.4.0"


[[bin]]
name = "isolate_main"
path = "src/isolate_main.rs"
